force-app/main/default/objects/Bedrock_KB_Section__c/Bedrock_KB_Section__c.object-meta.xml
<CustomObject>
    <description>A section of the Bedrock service knowledge base. In production this is Data Cloud Vector DB or Knowledge.</description>
    <label>Bedrock KB Section</label>
    <nameField>
    <label>Section Title</label>
    <type>Text</type>
</nameField>
    <pluralLabel>Bedrock KB Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>