force-app/main/default/objects/Bedrock_KB_Section__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>