force-app/main/default/objects/Bedrock_KB_Section__c/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <description>Space-separated keywords used by the retrieval action.</description>
    <label>Keywords</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>